<resources>
    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation View -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_backup">Backup</string>
    <string name="title_application">Application</string>
    <string name="title_share">Share</string>
    <string name="title_setting">Setting</string>
    <string name="title_about_app">About app</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <!-- Login Activity -->
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_confirm_password">Confirm password</string>
    <string name="login_email">Email</string>
    <string name="header_user">User</string>
    <string name="header_email">admin@andteam.co.kr</string>

</resources>
